--- a/Makefile.am
+++ b/Makefile.am
@@ -7,5 +7,5 @@ minidlna_SOURCES=minidlna.c upnphttp.c upnpdescgen.c upnpsoap.c \
            sql.c utils.c metadata.c scanner.c inotify.c \
            tivo_utils.c tivo_beacon.c tivo_commands.c \
            tagutils/textutils.c tagutils/misc.c tagutils/tagutils.c \
-           image_utils.c albumart.c log.c
+           image_utils.c albumart.c playlist.c log.c
 
